@@ -1,5 +1,8 @@
 2006-02-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* buildscripts/mf-to-table.py (Char_metric.__init__): remove
+	tfm_checksum stuff.
+
 	* lily/tie-formatting-problem.cc (from_lv_ties): add heads for
 	common refpoint.
 
